@@ -1,1 +1,1 @@
-2.3.0rc0
+2.3.0rc1
