@@ -3,6 +3,7 @@ $Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z
+	- [config] '#' can be escaped
 	- [uri] add u_uri_is_absolute interface
 	- [net] be more tolerant with missing setsockopt() (was causing bind()
 			failures on some platforms)
